<resources>
    <string name="app_name">Tatabuku</string>

    <string name="hutang_dan_piutang">Hutang dan Piutang</string>
    <string name="hutang_pelanggan">Hutang Pelanggan</string>
    <string name="hutang_saya">Hutang Saya</string>
    <string name="penjualan_dan_pembelian">Penjualan dan Pembelian</string>
    <string name="kas_dan_bank">Kas dan Bank</string>
    <string name="pembelian">Pembelian</string>
    <string name="penjualan">Penjualan</string>
    <string name="pos">POS</string>
    <string name="payNow">Sekarang</string>
    <string name="payLetter">Nanti</string>
    <string name="rekening">Rekening</string>
    <string name="accounting">Accounting</string>
    <string name="fixed_asset">Fixed Asset</string>
    <string name="tata_buku_ku">Tatakan Buku Ku</string>
    <string name="report">Report</string>
    <string name="admin">Admin</string>
    <string name="kas">Kas</string>
    <string name="bca">BCA</string>
    <string name="bank_mandiri">Bank Mandiri</string>
    <string name="bank_bri">Bank BRI</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter email to signin</string>
    <string name="enter_password">Enter password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="register_description">Please provide your details in the fields below\nyour information would remain confidential</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_address">Enter your address</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="agree_term">I agree to the terms of services and privacy policy</string>
    <string name="subscribe">Yes, send me deals, discounts, and updates</string>

    <string name="dashboard_supplier">Dashboard Supplier</string>
    <string name="dashboard_customer">Dashboard Customer</string>
    <string name="total_pembelian">Total Pembelian</string>
    <string name="total_penjualan">Total Penjualan</string>
    <string name="total_hutang">Total Hutang</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="total_saldo_dp">Total Saldo DP</string>
    <string name="total_dp">Total DP</string>
    <string name="total_piutang">Total Piutang</string>
    <string name="hari_ini">Hari ini</string>
    <string name="bulan_ini">Bulan ini</string>
    <string name="tahun_ini">Tahun ini</string>
    <string name="belum_jatuh_tempo">Belum Jatuh Tempo</string>
    <string name="belum_terlambat_bayar">Total Piutang</string>
    <string name="terlambat_1_30_hari">0-30 Hari</string>
    <string name="terlambat_31_60_hari">&gt; 30 Hari</string>
    <string name="hutang_0_hari">0 Hari</string>
    <string name="hutang_1_30_hari">0-30 Hari</string>
    <string name="hutang_31_60_hari">&gt; 30 Hari</string>
    <string name="hutang">Hutang</string>
    <string name="piutang">Piutang</string>
    <string name="uang_saya">Uang Saya</string>
    <string name="lunas">Lunas</string>
    <string name="selesai">Selesai</string>
    <string name="uang_muka">Uang Muka</string>
    <string name="dp_setor">DP Setor</string>
    <string name="dp_terpakai">DP Terpakai</string>
    <string name="dp_diterima">DP Diterima</string>
    <string name="saldo_dp">Saldo DP</string>
    <string name="daftarkan_supplier">Daftarkan Supplier</string>
    <string name="daftarkan_pelanggan">Daftarkan Pelanggan</string>

    <string name="detail_supplier">Detail Supplier</string>
    <string name="detail_customer">Detail Customer</string>
    <string name="checkout">Checkout</string>
    <string name="terima_barang">Terima Barang</string>
    <string name="kirim_barang">Kirim Barang</string>
    <string name="bayar">Bayar</string>
    <string name="edit">Edit</string>
    <string name="belum_di_checkout">Belum di checkout</string>
    <string name="belum_diterima">Belum diterima</string>
    <string name="diterima">Diterima</string>
    <string name="dikirim">Dikirim</string>
    <string name="sisa">Sisa</string>
    <string name="sudah_diterima">Sudah diterima</string>
    <string name="belum_lunas">Belum Lunas</string>
    <string name="sudah_lunas">Sudah Lunas</string>
    <string name="cancel">Cancel</string>
    <string name="partially_done">Terima Sebagian</string>
    <string name="n_barang">%1$d Barang</string>

    <string name="bayar_dp">Bayar DP</string>
    <string name="retur_barang">Retur Barang</string>
    <string name="refund_dp">Refund DP</string>
    <string name="refund_retur">Refund Retur</string>
    <string name="total_dp_n">Total DP : %1$s</string>

    <string name="search_here">Search Here</string>

    <string name="tambah_supplier">Tambah Supplier</string>
    <string name="edit_supplier">Edit Supplier</string>
    <string name="tambah_customer">Tambah Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="nama_supplier">Nama Supplier</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="provinsi">Provinsi</string>
    <string name="postal_code">Kode Pos</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="handphone">Handphone</string>
    <string name="email">Email</string>
    <string name="kredit_limit">Kredit Limit</string>
    <string name="total">Total</string>
    <string name="total_invoice">Total Invoice</string>
    <string name="total_payment">Total Payment</string>
    <string name="sisa_yang_harus_dibayar">Sisa yang harus dibayar</string>
    <string name="termin">Termin</string>
    <string name="unit">Unit</string>
    <string name="status_pajak">Status Pajak</string>
    <string name="pkp">PKP</string>
    <string name="non_pkp">Non PKP</string>
    <string name="npwp">NPWP</string>

    <string name="simpan">Simpan</string>
    <string name="batalkan">Batalkan</string>
    <string name="lanjutkan">Lanjutkan</string>

    <string name="order_pembelian">Order Pembelian</string>
    <string name="order_penjualan">Order Penjualan</string>
    <string name="n_per_item">%1$s per item</string>
    <string name="item">Item</string>
    <string name="harga_history">Harga (History) : %1$s</string>
    <string name="stok_saat_ini">Stok Saat Ini : %1$d Unit</string>
    <string name="x_n_unit">X %1$s unit</string>
    <string name="tambah_kode_barang">Tambah kode barang</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_retur">Nilai Total Barang Diretur</string>
    <string name="total_terima">Nilai Total Barang Diterima</string>
    <string name="total_kirim">Nilai Total Barang Dikirim</string>
    <string name="tambah_order">Tambah Order</string>
    <string name="tambah_retur">Tambah Retur</string>

    <string name="tambah_produk">Tambah Produk</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="nomor_sku">Nomor SKU</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="harga">Harga </string>
    <string name="kategori_produk">Kategori Produk</string>
    <string name="semua_kategori">Semua Kategori</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="min_stok">Minimum Stok</string>
    <string name="max_stok">Maksimum Stok</string>

    <string name="checkout_pembelian">Checkout Pembelian</string>
    <string name="checkout_penjualan">Checkout Penjualan</string>
    <string name="penerimaan_barang">Penerimaan Barang</string>
    <string name="pengiriman_barang">Pengiriman Barang</string>
    <string name="checkout_retur">Checkout Retur</string>
    <string name="order_no_n">Order No:%1$s</string>
    <string name="inv_no_n">%1$s</string>
    <string name="retur_no_n">Retur No: %1$s</string>
    <string name="tanggal_n">%1$s</string>
    <string name="alamat_penerimaan_barang">Alamat Penerimaan Barang</string>
    <string name="alamat_pengiriman_barang">Alamat Pengiriman Barang</string>
    <string name="list_barang">List Barang</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="ppn">PPN</string>
    <string name="simpan_dulu">Simpan Dulu</string>
    <string name="confirm">Confirm</string>

    <string name="tambah_dp_pembelian">Tambah DP Pembelian</string>
    <string name="tambah_dp_penjualan">Tambah DP Penjualan</string>
    <string name="customer_tambah_dp">Customer Tambah DP</string>
    <string name="customer_tarik_dp">Customer Tarik DP</string>
    <string name="refund_dp_pembelian">Refund DP Pembelian</string>
    <string name="tambah_dp">Tambah DP</string>
    <string name="no_voucher">No Voucher</string>
    <string name="tanggal">Tanggal</string>
    <string name="sebesar">Sebesar</string>
    <string name="dari_rekening">Dari Rekening :</string>
    <string name="ke_rekening">Ke Rekening :</string>

    <string name="pembayaran">Pembayaran</string>
    <string name="pilih_pembayaran">Pilih Pembayaran</string>
    <!--    <string name="n_produk_lainnya">+ %1$d Produk Lainnya</string>-->
    <string name="n_produk_lainnya">Cek Item</string>
    <string name="saldo_n">Saldo : %1$s</string>
    <string name="bayar_dengan_n">Bayar dengan %1$s</string>

    <string name="dp_masuk">DP Masuk</string>
    <string name="dp_keluar">DP Keluar</string>

    <string name="penjualan_by_channel">Penjualan by Channel</string>
    <string name="penjualan_by_item">Penjualan by Item</string>
    <string name="detail_penjualan">Detail Penjualan</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="terms_condition"><ul><li>
        fits and more are obtained by including </li>
        </ul>
    </string>
    <string name="rp">Rp</string>
    <string name="harga_rp">Harga :</string>
    <string name="list_customer">List Customer</string>
    <string name="klik_untuk_detail">List Detail</string>
    <string name="laporan">Laporan</string>
    <string name="laporan_pembelian">Pembelian</string>
    <string name="laporan_penjualan">Laporan Penjualan</string>
    <string name="laporan_rugilaba">Rugi Laba</string>
    <string name="laporan_neraca">Neraca</string>
    <string name="laporan_ar_aging">Aging Piutang</string>
    <string name="laporan_ap_aging">Aging Hutang</string>
    <string name="laporan_stok">Laporan Stok</string>

    <string name="register">DAFTAR</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="stock_awal">Stock Awal</string>
</resources>
