<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.pembelian.tambah.supplier.TambahSupplierActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="-150dp"
        android:scaleType="fitXY"
        android:src="@drawable/new_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/arrow_left"
                app:tint="@color/accounting_dark_blue" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tambah_supplier"
                android:gravity="center_horizontal"
                android:textColor="@color/accounting_dark_blue"
                android:textSize="24sp" />
        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:background="@drawable/white_transparent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:padding="4dp"
                        android:text="@string/perusahaan"
                        android:textColor="@color/blue"
                        android:textSize="12sp" />
                </FrameLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nama_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/nama_supplier"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/alamat"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/provinsi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/provinsi"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/kota"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/kota"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:padding="4dp"
                        android:text="@string/kredit_limit"
                        android:textColor="@color/blue"
                        android:textSize="12sp" />
                </FrameLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/total"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:padding="4dp"
                        android:text="@string/termin"
                        android:textColor="@color/blue"
                        android:textSize="12sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/termin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edittext"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/unit"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/down" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_pajak" />

                    <RadioGroup
                        android:id="@+id/status_pajak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/pkp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pkp" />

                        <RadioButton
                            android:id="@+id/non_pkp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/non_pkp" />
                    </RadioGroup>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/npwp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/npwp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:maxLength="15"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/cancel_button"
                        android:text="@string/batalkan"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/confirm_button"
                        android:text="@string/simpan"
                        android:textColor="@color/white" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/logo_black" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


    </LinearLayout>

</FrameLayout>